# UniTool

./: .gitattributes  .gitmodules  CMakeLists.txt
catalogs/: UniTool.cd  deutsch.ct  espanol.ct  francais.ct  portugues.ct
src/: gui.c  gui.h  main.c  messages.h
